--- a/style.css
+++ b/style.css
@@ -1570,10 +1570,29 @@ ul {
   background-color: #8a60c0;
 }
 
+/*--------------------------------------*\
+    $BUTTON AFTER GRAD IPHONE ADJUSTMENT
+\*--------------------------------------*/
+@media (max-width: 359px) {
+  /* line 206, assets/scss/objects/_nav.scss */
+  .button__aftergrad__image {
+    display: none;
+  }
+
+  /* line 207, assets/scss/objects/_nav.scss */
+  .button__aftergrad__link {
+    line-height: 2em;
+  }
+
+  /* line 208, assets/scss/objects/_nav.scss */
+  .button__aftergrad__text {
+    padding-right: 0.7em;
+  }
+}
 /*------------------------------------*\
     $BUTTONS BACK TO TOP
 \*------------------------------------*/
-/* line 207, assets/scss/objects/_nav.scss */
+/* line 213, assets/scss/objects/_nav.scss */
 .button__top {
   position: fixed;
   right: 10%;
@@ -1584,7 +1603,7 @@ ul {
   font-size: 0.8em;
 }
 
-/* line 216, assets/scss/objects/_nav.scss */
+/* line 222, assets/scss/objects/_nav.scss */
 .button__top:hover {
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
   filter: alpha(opacity=100);
@@ -1596,7 +1615,7 @@ ul {
   transition: opacity 0.2s;
 }
 
-/* line 222, assets/scss/objects/_nav.scss */
+/* line 228, assets/scss/objects/_nav.scss */
 .button__top svg {
   display: block;
   margin: auto;
@@ -1605,35 +1624,35 @@ ul {
 /*------------------------------------*\
     $LINKS
 \*------------------------------------*/
-/* line 231, assets/scss/objects/_nav.scss */
+/* line 237, assets/scss/objects/_nav.scss */
 a {
   text-decoration: none;
   color: #1a1a1a;
 }
 
-/* line 236, assets/scss/objects/_nav.scss */
+/* line 242, assets/scss/objects/_nav.scss */
 .nav__header a, .button {
   color: white;
 }
 
-/* line 240, assets/scss/objects/_nav.scss */
+/* line 246, assets/scss/objects/_nav.scss */
 .nav__footer a:hover {
   color: #70ae11;
 }
 
 @media only screen and (max-width: 1023px) {
-  /* line 245, assets/scss/objects/_nav.scss */
+  /* line 251, assets/scss/objects/_nav.scss */
   .nav__header a {
     color: #70ae11;
     border-left: 0.5em solid #e9e9e9;
   }
 
-  /* line 249, assets/scss/objects/_nav.scss */
+  /* line 255, assets/scss/objects/_nav.scss */
   .nav__header a:hover {
     border-left: 0.5em solid #70ae11;
   }
 
-  /* line 252, assets/scss/objects/_nav.scss */
+  /* line 258, assets/scss/objects/_nav.scss */
   .offcanvas a {
     color: #1a1a1a;
   }
